# rainbowprint

./: LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  rainbowprint.html  search.html  searchindex.js
.github/workflows/: compile-notebooks.yml  docs.yml  python-package.yml  tests.yml
_sources/: modules.rst.txt  rainbowprint.rst.txt
docs/: conf.py  index.rst  notebook1.html  notebook1.ipynb  requirements.txt
src/rainbowprint/: functions.py
tests/: test_import.py
