[project]
name = "rainbowprint"
version = "0.0.1"
description = "Uses matplotlib color maps to add color to strings."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["color", "text", "terminal"]

dependencies = [
  "matplotlib>=3.4.0,<4.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "furo",
    "sphinx-automodapi",
    "numpydoc",
    "nbsphinx",
    "pandoc",
]
test = [
    "pytest",
    "pytest-doctestplus",
    "flake8",
    "flake8-pyproject",
    "codecov",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
